--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,6 @@
 # TODO <!-- { -->
+* OAuth Working Group @ GitHub
+  * <https://github.com/orgs/oauth-wg/repositories>
 * DIF Presentation Request:
   <https://identity.foundation/presentation-exchange/spec/v2.0.0/#presentation-request>
 # MFA OOSS  [[{security.aaa.mfa]]
@@ -31,7 +33,7 @@ Open source alternative for multi-factor authentication: privacyIDEA
   * <https://www.gsma.com/get-involved/working-groups/sim-working-group/embedded-sim>.
 
 ## Okta "Identity as a Service" [[{]]
-  @[https://www.okta.com/]
+  <https://www.okta.com/>
 * 
   Identity for the Internet
   Okta is one trusted platform to secure every identity. More than
@@ -62,7 +64,7 @@ Open source alternative for multi-factor authentication: privacyIDEA
 
 # https://blockstack.org   [[{]]
   (supported by Tim Berners Lee)
-@[https://retina.elpais.com/retina/2017/10/17/innovacion/1508241687_063772.html?id_externo_rsoc=LK_CC]
+<https://retina.elpais.com/retina/2017/10/17/innovacion/1508241687_063772.html?id_externo_rsoc=LK_CC>
     Blockstack es uno de los proyectos más ambiciosos en esta línea.
   Esta compañía propone reinventar la red para asegurar la privacidad
   de los internautas. Sus impulsores han utilizado un software de
@@ -125,7 +127,7 @@ iOS, macOS, tvOS and watchOS apps in the Apple ecosystem, and all
 Android variants in the Google ecosystem
 
 ## FreeIPA [[{]]
-@[https://www.redditecom/r/linuxadmin/comments/apbjtc/freeipa_groups_and_linux_usernames/]
+<https://www.redditecom/r/linuxadmin/comments/apbjtc/freeipa_groups_and_linux_usernames/>
 
 * Main features
 * Integrated security information management solution combining Linux 
@@ -173,7 +175,7 @@ https://www.infoq.com/news/2021/05/airbnb-himeji/
   the 99 percentile.
 
 ## GoTrue OAuth [[{use_case.AAA,protocol.oauth,standards.jwt,01_PM.low_code,01_PM.TODO]]
-@[https://github.com/netlify/gotrue]
+<https://github.com/netlify/gotrue>
 
 - lightweight open-source and self-standing API for handling
   user registration (signup) and authentication and custom user data.
@@ -229,7 +231,7 @@ https://www.infoq.com/news/2021/05/airbnb-himeji/
      → keycloak admin console
        → create client:
          ID "https://example.com/.netlify/identity/saml" ← gotrue API endpoint
-   (@[https://yyhh.org/blog/2020/04/how-to-enable-saml-sso-with-self-hosted-gotrue-and-git-gateway/])
+   (<https://yyhh.org/blog/2020/04/how-to-enable-saml-sso-with-self-hosted-gotrue-and-git-gateway/>)
   · Kratos: https://www.ory.sh/kratos/
 [[}]]
 
@@ -247,5 +249,127 @@ authentication was establish,
 with our IdP and the request just going straight to the service,
 in this case Kiali.
 [[PROTOCOL.OAUTH,PROTOCOL.SAML}]]
+
+## Public Review Period for Proposed Implementer’s Draft of OpenID for Verifiable Credential Issuance
+https://openid.net/review-of-proposed-implementers-draft-of-openid-for-verifiable-credential-issuance/?trk=feed_main-feed-card_feed-article-content 
+
+The OpenID Foundation has announced a public review period for proposed implementer’s draft of OpenID for Verifiable Credential Issuance including support for SD-JWT VC [I-D.ietf-oauth-sd-jwt-vc], mDL [ISO.18013-5], and VCDM [VC_DATA] credentials. A bit of a milestone! Congratulations to Kristina, Torsten, Joseph and all the Digital Credentials Protocols (DCP) Working Group. https://lnkd.in/gGubmnRG.
+
+
+## feature comparison: it does not become clear that Keycloak is not an LDAP provider 
+https://github.com/goauthentik/authentik/issues/3800
+
+## OIDC Standard Claims
+https://openid.net/specs/openid-connect-core-1_0.html#StandardClaims
+
+5.1.  Standard Claims
+
+This specification defines a set of standard Claims. They can be requested to be returned either in the UserInfo Response, per Section 5.3.2, or in the ID Token, per Section 2.
+
+
+MemberTypeDescription
+sub string Subject - Identifier for the End-User at the Issuer.
+
+name string End-User's full name in displayable form including all name parts, possibly including titles and suffixes, ordered according to the End-User's locale and preferences.
+
+given_name string Given name(s) or first name(s) of the End-User. Note that in some cultures, people can have multiple given names; all can be present, with the names being separated by space characters.
+
+family_name string Surname(s) or last name(s) of the End-User. Note that in some cultures, people can have multiple family names or no family name; all can be present, with the names being separated by space characters.
+
+middle_name string Middle name(s) of the End-User. Note that in some cultures, people can have multiple middle names; all can be present, with the names being separated by space characters. Also note that in some cultures, middle names are not used.
+
+nickname string Casual name of the End-User that may or may not be the same as the given_name. For instance, a nickname value of Mike might be returned alongside a given_name value of Michael.
+
+preferred_username string Shorthand name by which the End-User wishes to be referred to at the RP, such as janedoe or j.doe. This value MAY be any valid JSON string including special characters such as @, /, or whitespace. The RP MUST NOT rely upon this value being unique, as discussed in Section 5.7.
+
+profile string URL of the End-User's profile page. The contents of this Web page SHOULD be about the End-User.
+
+picture string URL of the End-User's profile picture. This URL MUST refer to an image file (for example, a PNG, JPEG, or GIF image file), rather than to a Web page containing an image. Note that this URL SHOULD specifically reference a profile photo of the End-User suitable for displaying when describing the End-User, rather than an arbitrary photo taken by the End-User.
+
+
+website string URL of the End-User's Web page or blog. This Web page SHOULD contain information published by the End-User or an organization that the End-User is affiliated with.
+
+email string End-User's preferred e-mail address. Its value MUST conform to the RFC 5322 [RFC5322] addr-spec syntax. The RP MUST NOT rely upon this value being unique, as discussed in Section 5.7.
+
+email_verified boolean True if the End-User's e-mail address has been verified; otherwise false. When this Claim Value is true, this means that the OP took affirmative steps to ensure that this e-mail address was controlled by the End-User at the time the verification was performed. The means by which an e-mail address is verified is context-specific, and dependent upon the trust framework or contractual agreements within which the parties are operating.
+
+gender string End-User's gender. Values defined by this specification are female and male. Other values MAY be used when neither of the defined values are applicable.
+
+birthdate string End-User's birthday, represented as an ISO 8601:2004 [ISO8601‑2004] YYYY-MM-DD format. The year MAY be 0000, indicating that it is omitted. To represent only the year, YYYY format is allowed. Note that depending on the underlying platform's date related function, providing just year can result in varying month and day, so the implementers need to take this factor into account to correctly process the dates.
+
+zoneinfo string: String from zoneinfo [zoneinfo] time zone database representing the End-User's time zone. For example, Europe/Paris or America/Los_Angeles.
+locale string End-User's locale, represented as a BCP47 [RFC5646] language tag. This is typically an ISO 639-1 Alpha-2 [ISO639‑1] language code in lowercase and an ISO 3166-1
+
+Alpha-2 [ISO3166‑1] country code in uppercase, separated by
+a dash. For example, en-US or fr-CA. As a compatibility note, some implementations have used an underscore as the separator rather than a dash, for example, en_US; Relying Parties MAY choose to accept this locale syntax as well.
+
+phone_number string End-User's preferred telephone number. E.164 [E.164] is RECOMMENDED as the format of this Claim, for example, +1 (425) 555-1212 or +56 (2) 687 2400. If the phone number contains an extension, it is RECOMMENDED that the extension be represented using the RFC 3966 [RFC3966] extension syntax, for example, +1 (604) 555-1234;ext=5678.
+
+phone_number_verified boolean True if the End-User's phone number has been verified; otherwise false. When this Claim Value is true, this means that the OP took affirmative steps to ensure that this phone number was controlled by the End-User at the time the verification was performed. The means by which a phone number is verified is context-specific, and dependent upon the trust framework or contractual agreements within which the parties are operating. When true, the phone_number Claim MUST be in E.164 format and any extensions MUST be represented in RFC 3966 format.
+
+address JSON object End-User's preferred postal address. The value of the address member is a JSON [RFC4627] structure containing some or all of the members defined in Section 5.1.1.
+
+updated_at number Time the End-User's information was last updated. Its value is a JSON number representing the number of seconds from 1970-01-01T0:0:0Z as measured in UTC until the date/time.
+
+## WaltID:  Community Stack released
+https://www.linkedin.com/feed/update/activity:7141003969853652992?trk=viral_share
+
+Today, we are open-sourcing the first version of the community stack. A new set of tools for more flexibility, modularity, efficiency and ease of use, so organisations and developers can focus on delivering holistic identity solutions.
+
+Access the new multi-platform libraries, APIs and Apps via the walt.id identity repo. If you enjoy the new stack, make sure to leave us a star on GitHub.
+
+https://github.com/walt-id/waltid-identity
+
+## Lissi ID-Wallet: Towards eIDAS2 and EUDI-Wallet compatibility | by Lissi | Dec, 2023 | Medium
+https://lissi-id.medium.com/lissi-id-wallet-towards-eidas2-and-eudi-wallet-compatibility-0eec47d0b468
+
+We encourage developers of issuance and verification software to test their implementations against our wallet to ensure interoperability and seamless functionality.
+
+## 101 openid connect
+
+See section 10 of RFC for details of Signatures and Encryption
+
+
+## rfc6750 bearer token
+
+https://datatracker.ietf.org/doc/html/rfc6750 bearer token
+
+1. Authorization: bearer xxxxx
+
+2.FORM URL ENCO: acess_token
+
+If the protected resource request included an access token and failed
+   authentication, the resource server SHOULD include the "error"
+   attribute to provide the client with the reason why the access
+   request was declined.  The parameter value is described in
+   Section 3.1.  In addition, the resource server MAY include the
+   "error_description" attribute to provide developers a human-readable
+   explanation that is not meant to be displayed to end-users.  It also
+   MAY include the "error_uri" attribute with an absolute URI
+   identifying a human-readable web page explaining the error.  The
+   "error", "error_description", and "error_uri" attributes MUST NOT
+   appear more than once.
+
+   Values for the "scope" attribute (specified in Appendix A.4 of
+   [RFC6749]) MUST NOT include characters outside the set %x21 / %x23-5B
+   / %x5D-7E for representing scope values and %x20 for delimiters
+   between scope values.  Values for the "error" and "error_description"
+   attributes (specified in Appendixes A.7 and A.8 of [RFC6749]) MUST
+   NOT include characters outside the set %x20-21 / %x23-5B / %x5D-7E.
+   Values for the "error_uri" attribute (specified in Appendix A.9 of
+   [RFC6749]) MUST conform to the URI-reference syntax and thus MUST NOT
+   include characters outside the set %x21 / %x23-5B / %x5D-7E.
+
+   For example, in response to a protected resource request without
+   authentication:
+
+     HTTP/1.1 401 Unauthorized
+     WWW-Authenticate: Bearer realm="example"
+
+## Idpkit Client Registration - Docs
+https://docs.walt.id/v/idpkit/tutorials/login-with-nfts-or-next.js/client-registration
+
+## 101 OIDC lib based on GO
+https://github.com/trustbloc/vcs
 
 <!-- } -->
